// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should match snapshot when sidebar closed 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={false}
  mapToProps={[Function]}
  sidebarView="search"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and ROUTE_ELEMENTS_FILTER 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="elementsFilter"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_CUSTOM_QUERY 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="customQuery"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_EDIT_ONTOLOGY 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="editOntology"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_ELEMENTS_SELECTION 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="elementsSelection"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_ENTRY_SEARCH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="search"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_ENTRY_SEARCH and isGuest 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={false}
  mapToProps={[Function]}
  sidebarView="search"
  updateStoreValue={[MockFunction]}
  user={
    Object {
      "isGuest": true,
    }
  }
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_EXPORT 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="export"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_GRAPH_OPTIONS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="networkGraphOptions"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_GRAPHS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="networkGraphs"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_NEIGHBOURHOOD 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="nodeNeighbourhood"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_SHORTEST_PATH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="shortestPath"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_STYLING 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="styling"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_SYNONYMS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
      "graph-1": Object {
        "label": "Search",
      },
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="synonyms"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
